# archifer

./: .gitignore  README.md  pyproject.toml
data/: CEA_archetypes_v1.CSV  archetypes_v1.xlsx  constraints.yaml  constraints_sector_model.xlsx  exercise1.xlsx  gebaeudesektor_at.xlsx  statcube_mappings.yaml  table_2025-11-25_13-54-25.xlsx  table_2026-01-12_11-55-38AT_AnzahlxBauperiode.xlsx  table_2026-01-12_11-55-55AT_NGFxBauperiode.xlsx  test_constraints.yaml  write and save in format.xlsm
docs/: charter.md  method.md  methods_de.md
notebooks/: Whiskas test.lp  building_sector_model_tutorial.ipynb  building_sector_model_tutorial_updated.ipynb  dev.ipynb  from_scratch.ipynb  full_formulation.ipynb  ontology.yaml  quick_solver.ipynb  simple_constraint.ipynb  statcube_mapping.ipynb
notebooks/outputs/: building_sector_constraint_evaluation.xlsx  building_sector_energy_summary.xlsx
src/archifer/: cfbs.py  model.py  parser.py  quick_solver.ipynb
src/archifer.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/model/: project.py  scenario.py
src/peexcel_model/: district.py
